@@ -77,6 +77,8 @@ if (isAppleMacWebKit()) {
 } elsif (isWx()) {
     # Builds everything in one-shot. No need to build anything here.
     $result = 0;
+} elsif (cmakeBasedPortName()) {
+    buildCMakeProjectOrExit(0, cmakeBasedPortName(), undef, undef, ("-DONLY_BUILD_JAVASCRIPTCORE=1", cmakeBasedPortArguments())); # This call never returns.
 } else {
     die "Building not defined for this platform!\n";
 }
